# delikateska-ui-test-project

./: .env.example  README.md  pyproject.toml
model/: application_manager.py
model/pages/: catalog_page.py  favorite_page.py  main_page.py  search_page.py  web_delikateska.py
tests/: api.py  conftest.py  test_delikateska.py  test_web_delikateska.py
